added prisma orm

--- a/.env.sample
+++ b/.env.sample
@@ -8,7 +8,10 @@ HOST_URL=http://localhost:3000
 
 # Postgres configuration
 DB_HOST=localhost
-DB_USER=pguser
-DB_DATABASE=pgdb
-DB_PASSWORD=secret
 DB_PORT=5432
+DB_DATABASE=pgdb
+DB_USER=pguser
+DB_PASSWORD=secret
+
+# Postgres connection
+DB_URL="postgresql://username:password@localhost:5432/database_name?schema=public"
