--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "schedule",
-  "version": "0.0.0",
-  "private": true,
-  "main": "dist/index.js",
-  "scripts": {
-    "clean": "rimraf dist/*",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc",
-    "dev:start": "npm-run-all build start",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
-    "start": "node ."
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "pg-promise": "^10.8.1"
-  },
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.9",
-    "@types/morgan": "^1.9.2",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.2",
-    "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5"
-  }
+    "name": "schedule",
+    "version": "0.0.0",
+    "private": true,
+    "main": "dist/index.js",
+    "scripts": {
+        "clean": "rimraf dist/*",
+        "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+        "tsc": "tsc",
+        "build": "npm-run-all clean lint tsc",
+        "dev:start": "npm-run-all build start",
+        "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+        "start": "node ."
+    },
+    "dependencies": {
+        "@prisma/client": "^2.12.1",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "dotenv": "^8.2.0",
+        "express": "~4.16.1",
+        "morgan": "~1.9.1",
+        "pg-promise": "^10.8.1"
+    },
+    "devDependencies": {
+        "@prisma/cli": "^2.12.1",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/express": "^4.17.9",
+        "@types/morgan": "^1.9.2",
+        "@types/node": "^14.14.10",
+        "nodemon": "^2.0.6",
+        "npm-run-all": "^4.1.5",
+        "ts-node": "^9.1.0",
+        "tslint": "^6.1.3",
+        "typescript": "^4.1.2"
+    }
 }
