--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
     },
     "dependencies": {
         "@prisma/client": "^2.12.1",
-        "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "dotenv": "^8.2.0",
         "express": "~4.16.1",
-        "morgan": "~1.9.1",
-        "pg-promise": "^10.8.1"
+        "morgan": "~1.9.1"
     },
     "devDependencies": {
         "@prisma/cli": "^2.12.1",
-        "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.9",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.10",
