--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "debug": "~2.6.9",
         "dotenv": "^8.2.0",
         "express": "~4.16.1",
+        "moment": "^2.29.1",
         "morgan": "~1.9.1"
     },
     "devDependencies": {
