--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "clean": "rimraf dist/*",
-        "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+        "lint": "eslint -c .eslintrc.json --ext .ts src",
         "tsc": "tsc",
         "build": "npm-run-all clean lint tsc",
         "dev:start": "npm-run-all build start",
@@ -25,10 +25,12 @@
         "@types/express": "^4.17.9",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.10",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
+        "eslint": "^7.15.0",
         "nodemon": "^2.0.6",
         "npm-run-all": "^4.1.5",
         "ts-node": "^9.1.0",
-        "tslint": "^6.1.3",
         "typescript": "^4.1.2"
     }
 }
