--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@prisma/client": "^2.12.1",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
         "dotenv": "^8.2.0",
         "express": "~4.16.1",
@@ -22,6 +23,7 @@
     },
     "devDependencies": {
         "@prisma/cli": "^2.12.1",
+        "@types/cors": "^2.8.9",
         "@types/express": "^4.17.9",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.10",
